--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     </string-array>
 
     <string-array name="spinnerEndHour">
+        <item>選択しない</item>
         <item>0</item>
         <item>1</item>
         <item>2</item>
