--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,8 @@
 
 
     <string name="saveButton">保存</string>
+    <string name="edit">編集</string>
+    <string name="delete">削除</string>
 
 
 </resources>
