--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,6 @@
     </string-array>
 
 
-
     <string name="saveButton">保存</string>
 
     <string name="delete">削除</string>
@@ -90,7 +89,8 @@
     <string name="dialogMsg">選択されたスケジュールを削除します。よろしいですか。</string>
     <string name="dialogBtnOk">削除します</string>
     <string name="dialogBtnNg">キャンセル</string>
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
